--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,13 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "angular": "1.5.11",
-    "angular-animate": "1.5.11",
-    "angular-aria": "1.5.11",
+    "angular": "^1.7.2",
+    "angular-animate": "^1.7.2",
+    "angular-aria": "^1.7.2",
     "angular-cookies": "1.5.11",
     "angular-i18n": "1.5.11",
-    "angular-material": "1.0.8",
-    "angular-messages": "1.5.11",
+    "angular-material": "^1.2.5",
+    "angular-messages": "^1.7.2",
     "angular-mocks": "1.5.11",
     "angular-route": "1.5.11",
     "angular-sanitize": "1.5.11",
