--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -2,22 +2,15 @@
   "name": "MembershipSub-Promotions-PromoCode-View",
   "version": "0.0.1",
   "description": "A lambda to create a view of the Promotions and Campaigns table keyed by the promo code.",
-  "isAwsLambda": true,
-  "cloudformation": false,
-  "projectName": "MemSub::Membership Admin::Promotions Tool Lambda",
-  "riffraffFile": "riff-raff.yaml",
   "buildDir": "dist",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "node-riffraff-artefact": "^2.0.1"
+    "babel-preset-env": "^1.4.0"
   },
   "scripts": {
-    "riffraff-artefact": "./node_modules/.bin/riffraff-artefact",
     "dist": "yarn install --production --modules-folder dist/node_modules",
     "compile": "babel src -d dist",
-    "riffraff": "VERBOSE=true ARTEFACT_PATH=$PWD yarn riffraff-artefact",
     "clean": "rm -rf dist && rm -rf target"
   },
   "dependencies": {
