--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,15 +25,15 @@
     "angular": "^1.7.2",
     "angular-animate": "^1.7.2",
     "angular-aria": "^1.7.2",
-    "angular-cookies": "1.5.11",
-    "angular-i18n": "1.5.11",
+    "angular-cookies": "^1.5.11",
+    "angular-i18n": "^1.5.11",
     "angular-material": "^1.2.5",
     "angular-messages": "^1.7.2",
-    "angular-mocks": "1.5.11",
-    "angular-route": "1.5.11",
+    "angular-mocks": "^1.5.11",
+    "angular-route": "^1.5.11",
     "angular-sanitize": "1.5.11",
-    "angular-ui-router": "0.3.0",
-    "angular-uuid": "0.0.2",
+    "angular-ui-router": "^0.4.0",
+    "angular-uuid": "^0.0.2",
     "babel-loader": "^8.0.5",
     "babel-plugin-angularjs-annotate": "^0.10.0",
     "babel-polyfill": "6.23.0",
