--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "sass": "^1.63.6",
     "sass-loader": "^8.0.0",
     "text-loader": "0.0.1",
-    "webpack": "5.88.1",
+    "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
