--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A lambda to create a view of the Promotions and Campaigns table keyed by the promo code.",
   "buildDir": "dist",
+  "type": "module",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -14,6 +15,10 @@
     "clean": "rm -rf dist && rm -rf target"
   },
   "dependencies": {
-    "aws-sdk": "^2.1143.0"
+    "@aws-sdk/client-dynamodb": "^3.0.0",
+    "@aws-sdk/client-kms": "^3.369.0",
+    "@aws-sdk/client-s3": "^3.369.0",
+    "@aws-sdk/lib-dynamodb": "^3.369.0",
+    "@aws-sdk/types": "^3.0.0"
   }
 }
